first commit( test)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,7 +21,7 @@ and open the template in the editor.
         <tr>
             <th> № </th>
             <th> Surname </th>
-            <th> Ma </th>
+            <th> Mark </th>
         </tr>
         <tr>
             <td> 1 </td>
