--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,9 @@ and open the template in the editor.
 -->
 <html>
     <head>
+        
         <title>Pervoe zadanie</title>
+        <link rel="stylesheet" type="text/css" href="newcss.css" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
