--- a/public_html/exercise1/solution/Volodymyr-Bairamov.html
+++ b/public_html/exercise1/solution/Volodymyr-Bairamov.html
@@ -6,11 +6,42 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Pervoe zadanie</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Виконуємо завдання на ура =*</div>
+        <p>
+      Это ссылка на почту:
+      <a href="mailto:likazorjak123@gmail.com">моя почтова скринька</a>
+    </p>
+    <table> 
+        <tr>
+            <th> № </th>
+            <th> Surname </th>
+            <th> Mark </th>
+        </tr>
+        <tr>
+            <td> 1 </td>
+            <td> Feliks </td>
+            <td> 10 </td>
+        </tr>
+        <tr>
+            <td> 2 </td>
+            <td> George </td>
+            <td> 9 </td>
+        </tr>
+    </table>
+    <ol type="a">
+  <li>Джекі Чан</li>
+  <li>Чак Норіс</li>
+  <li>Бред Піт</li>
+  <li>Володька</li>
+  <li>Хью Джекман</li>
+  <li>Брітні Спірс</li>
+  </ol>
+    <img src="снимок.png" alt="цветок">
     </body>
 </html>
