--- a/public_html/exercise3/solution/VovaBairamov3(1).html
+++ b/public_html/exercise3/solution/VovaBairamov3(1).html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">  
 		<title>zadanie 3(1)</title>
-		<link rel="stylesheet" href="newcss.css">
+		<link rel="stylesheet" href="VovaBairamov3(1).css">
 	</head>
 	<body>
 		<div class="opacity">
