--- a/public_html/exercise3/exercise.html
+++ b/public_html/exercise3/exercise.html
@@ -14,7 +14,7 @@ http://css.phphtml.net/tasks/4/1.html
 
 Create only 3 html and 3 related css.
 
-Put the output to folder "solution" with document name as you github login for example:
+Put the output to folder "solution" create your own folder with name as you github login and put where 6 doc, for example:
 visplord1.html, vipslord1.css
 visplord2.html, vipslord2.css
 visplord3.html, vipslord3.css
