--- a/public_html/js/exercise1/Volodymyr-Bairamov/VB3.html
+++ b/public_html/js/exercise1/Volodymyr-Bairamov/VB3.html
@@ -6,10 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <script src="newjavascript.js"></script>
-        
-        <div>
-            
-        </div>
+        <script src="VB3.js"></script>
     </body>
 </html>
