--- a/public_html/js/exercise1/Volodymyr-Bairamov/VB1.html
+++ b/public_html/js/exercise1/Volodymyr-Bairamov/VB1.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -7,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <script src="secondjs.js"></script>
-        <div></div>
+        <script src="VB1.js"></script>
     </body>
 </html>
