--- a/public_html/js/exercise1/Volodymyr-Bairamov/VB2.html
+++ b/public_html/js/exercise1/Volodymyr-Bairamov/VB2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -6,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <script src="VB2.js"></script>
+        <script src="secondjs.js"></script>
+        <div></div>
     </body>
 </html>
