rename file name

--- a/public_html/js/exercise1/Volodymyr-Bairamov/VB2.html
+++ b/public_html/js/exercise1/Volodymyr-Bairamov/VB2.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <script src="secondjs.js"></script>
+        <script src="VB2.js"></script>
         <div></div>
     </body>
 </html>
