--- a/public_html/html&css/exercise1/Schvvarz.html
+++ b/public_html/html&css/exercise1/Schvvarz.html
@@ -14,6 +14,14 @@
       Это ссылка на почту:
       <a href="mailto:likazorjak123@gmail.com">моя почтова скринька</a>
     </p>
+    <div id="lolka"></div>
+    <ul class="lolka">
+        <li>hahahahahaha</li>
+    </ul>
+    </getgead>
+    </kaka>
+    </lolka>
+    </lolka>
     <table> 
         <tr>
             <th> № </th>
