Грузия - раша +волололо

--- a/public_html/html&css/exercise1/Schvvarz.html
+++ b/public_html/html&css/exercise1/Schvvarz.html
@@ -17,6 +17,7 @@
     <div id="lolka"></div>
     <ul class="lolka">
         <li>hahahahahaha</li>
+        <li>wolololo</li>
     </ul>
     sdgdfgdcfg dffd
     </getgead>
@@ -36,7 +37,7 @@
         </tr>
         <tr>
             <td> 2 </td>
-            <td> George </td>
+            <td> Russia </td>
             <td> 9 </td>
         </tr>
     </table>
