--- a/public_html/html&css/exercise1/Schvvarz.html
+++ b/public_html/html&css/exercise1/Schvvarz.html
@@ -18,6 +18,7 @@
     <ul class="lolka">
         <li>hahahahahaha</li>
         <li>wolololo</li>
+        <tr>fuck</tr>
     </ul>
     sdgdfgdcfg dffd
     </getgead>
