--- a/public_html/newhtml2.html
+++ b/public_html/newhtml2.html
@@ -6,20 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Hello World</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <link rel="stylesheet" href="css-two/style.css" >
-        <style>   .shadowtext {
-    text-shadow: 1px 1px 2px black, 0 0 1em red; 
-    color: black; 
-    font-size: 2em; 
-   }</style>
     </head>
     <body>
-        <div class="hover__place">
-            <span>Яхуууууу...</span>
-        </div>
+        <div>TODO write content</div>
     </body>
 </html>
