--- a/public_html/html&css/exercise2/pozivnoy schvvarz/newhtml.html
+++ b/public_html/html&css/exercise2/pozivnoy schvvarz/newhtml.html
@@ -30,7 +30,8 @@
                         <a href="#" class="lol"><li>Portfolio</li></a>
                         <a href="#" class="lol2"><li>Services</li></a>
                         <a href="#" class="lol2"><li>Others</li></a>
-                        <a href="#" class="lol"><li>Contact</li></a>                
+                        <a href="#" class="lol"><li>Contact</li></a>
+                    </ul>
                 </nav>
             </div>
         </header>
@@ -58,14 +59,14 @@
                         </div>
                     </div> 
                 <div class="item"> 
-                    <img src="img/slider.jpg">
+                    <img src="img/slider.jpg" alt="crow">
                     <div class="carousel-caption">
                         <h3>Третий слайд</h3>
                         <p>Описание к третьему слайду</p>
                     </div>
                 </div>
                     <div class="item"> 
-                        <img src="img/slider.jpg"><div class="carousel-caption">
+                        <img src="img/slider.jpg" alt="crow"><div class="carousel-caption">
                             <h3>Четвертый слайд</h3>
                             <p>Описание к четвертому слайду</p></div> 
                     </div> 
