--- a/public_html/sebastianStark/mySwipe/swipe.html
+++ b/public_html/sebastianStark/mySwipe/swipe.html
@@ -1,41 +1,27 @@
 <html>
 
-<head>
-
-    <title>StarkJS1</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js?ver=1.8.1"></script>
-    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-</head>
-
-<body>
-    <script src="stark.js"></script>
-    <div id="touchsurface2">
-        <div class="back-button">
-            <img src="img/111.png"> </div>
-    </div>
-    <style>
-    .back-button {
-        position: fixed;
-        width: 40px;
-        height: 40px;
-        display: none;
-    }
+  <head>
+      <title>mySwipe</title>
+      <style>
+        .back-button {
+            position: fixed;
+            width: 40px;
+            height: 40px;
+            visibility: hidden;
+        }
         .back-button img {
             width: 100%;
             height: 100%;
         }
-        #touchsurface2 {
-            width: 100%;
-            height: 100%;
-            border: 1px solid orange;
-            background: lightyellow;
-            position: relative;
-            background-color: #F2F2F2;
-            cursor: pointer;
-            overflow: hidden;
-        }
-    }
-    </style>
-</body>
+      </style>
+  </head>
+
+  <body>
+      <script src="stark.js"></script>
+      <div id="touchsurface2">
+          <div class="back-button">
+              <img src="img/111.png" alt="history back"> </div>
+      </div>
+  </body>
 
 </html>
