--- a/public_html/js/exercise2/pozivnoy Schwarz/ex2.html
+++ b/public_html/js/exercise2/pozivnoy Schwarz/ex2.html
@@ -8,7 +8,7 @@
         </title>
             </head>
     <body>
-        середнє арифметичне з масиву [1,2,3,4,5]
+        середнє арифметичне з масивів
     </body>
 
 </html>
