--- a/public_html/js/exercise2/telller/ex2.html
+++ b/public_html/js/exercise2/telller/ex2.html
@@ -4,7 +4,7 @@
         <title>telller</title>
     </head>
     <body>
-        <h3>Середнє арифметичне масивів</h3>
+        <h3>Середнє арифметичне п’яти випадкових масивів</h3>
         <script src="ex2.js"></script>
     </body>
 </html>
