Виправив назву задачі

--- a/public_html/js/exercise2/EarlOld/two.html
+++ b/public_html/js/exercise2/EarlOld/two.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<p>Написати функцію, яка заповнює масив випадковими числами в діапазоні, зазначеному користувачем. Функція повинна приймати два аргументи - початок діапазону і його кінець</p>
+<p>Написати функцію, яка знаходить середнє арифметичне п'яти масивів:</p>
 <p>Реалізація:</p>
 
 
