--- a/public_html/js/Ilya JS/index.html
+++ b/public_html/js/Ilya JS/index.html
@@ -13,5 +13,6 @@
   <script src="./script3.js"></script>
   <script src="./script4.js"></script>
   <script src="./script5.js"></script>
+  <script src="./script6.js"></script>
 </body>
 </html>
