--- a/public_html/js/Ilya JS/index.html
+++ b/public_html/js/Ilya JS/index.html
@@ -14,5 +14,6 @@
   <script src="./script4.js"></script>
   <script src="./script5.js"></script>
   <script src="./script6.js"></script>
+  <script src="./script7.js"></script>
 </body>
 </html>
